Fix: workspace number flickering over component to the right (cava fixed it )

--- a/waybar/style/style-dark.css
+++ b/waybar/style/style-dark.css
@@ -113,7 +113,10 @@ tooltip label {
 }
 
 #custom-cava {
-	color: @maroon;
+	/*color: @maroon;*/
+	color: transparent;
+	background: transparent;
+	opacity: 0;
 }
 
 #clock,
